--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
 # SonarQube project configuration
-sonar.projectKey=cxx-learning
+sonar.organization=sdwalker62
+sonar.projectKey=sdwalker62_cxx_learning
 sonar.projectName=C++ Learning Repository
 sonar.projectVersion=1.0
 
@@ -19,6 +20,7 @@ sonar.cfamily.build-wrapper-output=bw-output
 sonar.cfamily.threads=4
 
 # Optional: If you have a SonarQube server
+sonar.host.url=https://sonarcloud.io
 # sonar.host.url=http://localhost:9000
 # sonar.login=your-token-here
 
